--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p>В игре вам надо убивать других игроков получать за это деньги и покупать новое оружие </p>
         <p> хорошо сделан эфект убиств (к слову их можно покупать) олдовые карты, есть тяжёлое оружие и легкое  </p>
         </main>        
-        <footer>
+        <footer style="color: MintCream">
             <table style="font-size: 30px">
             <tr>
                 <td>Discord Server</td>
