--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <header style="border: 8px dotted FloralWhite"> 
             <h1 style="font-size: 64px; text-align: center; color: Cornsilk">Топ плейсы роблокс на 2023-2024</h1>
         </header>
-        <main style="text-align: center; font-size: 30px">
+        <main style="text-align: center; font-size: 30px; color: MintCream">
             <img src="folder/1.png"/>  
             <h2 style="font-size: 40px"><font color="MintCream"/>  nico's nextbots</h2>
         <p>Хороший плейс с очень хорошей графикой где вам предстоит убегать от некст ботов, </p>
         <p>лоби насыщено позитивным вайбом).</p> 
-        <h2 style="font-size: 40px"><font color="MintCream"/> Slap Battles </h2>
+        <h2 style="font-size: 40px"> Slap Battles </h2>
         <p> <img src="folder/2.png"> </p>
         <p>"Slap battles" ОЧЕНЬ хороший плейс, присуствует хороший гейм плей :> </p> 
     
@@ -18,7 +18,7 @@
         <p> вообщем игра хорошая много посхалок, разраб шарит за мемы (не доказано)</p>
 
         <p> <img src="folder/3.png"> </p>  
-         <h2 style="font-size: 40px"><font color="MintCream"/> "Combat Warrios"  </h2>
+         <h2 style="font-size: 40px"> "Combat Warrios"  </h2>
         <p> Плейс на любителя, плейс сделан для любителей пвп  </p>
         <p>В игре вам надо убивать других игроков получать за это деньги и покупать новое оружие </p>
         <p> хорошо сделан эфект убиств (к слову их можно покупать) олдовые карты, есть тяжёлое оружие и легкое  </p>
