--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         </header>
         <main style="text-align: center; font-size: 30px; color: MintCream">
             <img src="folder/1.png"/>  
-            <h2 style="font-size: 40px"><font color="MintCream"/>  nico's nextbots</h2>
+            <h2 style="font-size: 40px">  nico's nextbots</h2>
         <p>Хороший плейс с очень хорошей графикой где вам предстоит убегать от некст ботов, </p>
         <p>лоби насыщено позитивным вайбом).</p> 
         <h2 style="font-size: 40px"> Slap Battles </h2>
