--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <p>В игре вам надо убивать других игроков получать за это деньги и покупать новое оружие </p>
         <p> хорошо сделан эфект убиств (к слову их можно покупать) олдовые карты, есть тяжёлое оружие и легкое  </p>
         </main>        
-        <footer style="color: MintCream">
-            <table style="font-size: 30px">
+        <footer>
+            <table style="font-size: 30px; color: red">
             <tr>
                 <td>Discord Server</td>
                 <td>THE PLATE</td>
