--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p> хорошо сделан эфект убиств (к слову их можно покупать) олдовые карты, есть тяжёлое оружие и легкое  </p>
         </main>        
         <footer>
-            <table style="font-size: 30px; color: red">
+            <table style="font-size: 30px; color: MintCream">
             <tr>
                 <td>Discord Server</td>
                 <td>THE PLATE</td>
